@@ -1,3 +1,8 @@
+2008-11-16  Jonh Wendell <jwendell@gnome.org>
+
+	* lots of files: Drag and drop ability: Bookmark can be added by dragging
+	and dropping an tab into it. Closes #536896.
+
 2008-11-14  Jonh Wendell <jwendell@gnome.org>
 
 	* lots of files: Added an initial preferences dialog.
